--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -24,7 +24,7 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
-  margin: 30px 0 20px;
+  margin: 40px 0 20px;
   font-weight: 400;
   border-bottom: rgba(255, 255, 255, 0.4) 1px solid;
   width: 100%;
@@ -36,12 +36,13 @@
 }
 
 .calculator__result {
-  font-size: 1.7em;
+  font-size: 1.5em;
   font-weight: 500;
-  margin: 20px 0 10px;
+  margin: 20px 0 20px;
   display: flex;
   justify-content: end;
-  padding-right: 10px;
+  padding: 0 10px;
+  width: calc(100% - 20px);
 }
 
 .calculator__buttons {
