--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -3,6 +3,7 @@
   padding: 30px 20px;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 15px;
+  box-sizing: border-box;
 }
 
 .calculator {
@@ -94,5 +95,11 @@
 @media screen and (max-width: 410px) {
   .calculator {
     font-size: 12px;
+  }
+}
+
+@media screen and (min-aspect-ratio: 2/1) {
+  .calculator__wrap {
+    margin-top: 200px;
   }
 }
